<resources>
    <string name="app_name">COESA</string>
    <string name="coesa_application_forms">COESA APPLICATION FORMS</string>
    <string name="ab">TODO</string>
    <string name="president">PRESIDENT</string>
    <string name="only_for_third_year_student">ONLY FOR THIRD YEAR STUDENT</string>
    <string name="def">TODO</string>
    <string name="secretary">SECRETARY</string>
    <string-array name="Post">
        <item>Last Year Post:President</item>
        <item>Last Year Post:Secretary</item>
        <item>Last Year Post:Technical Head</item>
        <item>Last Year Post:Head Of Panel</item>
        <item>Last Year Post: - </item>
    </string-array>
</resources>
